# music_visualizer

./: .gitignore  .gitmodules  .ycm.py  CMakeLists.txt  DataPlot.nb  FileWatcher.h  JsonFileReader.h  JsonReader.h  Makefile  README  README.md  Renderer.cpp  Renderer.h  ShaderConfig.cpp  ShaderConfig.h  ShaderPrograms.cpp  ShaderPrograms.h  Window.cpp  Window.h  after_reset.txt  audio_capture.cpp  audio_capture.h  audio_data.h  audio_process.cpp  audio_process.h  circular.cpp  draw.cpp  draw.h  during_error.txt  filesystem.h  geom.glsl  gl.h  image.glsl  lissajous.frag  lissajous.vert  main  main.cpp  music_visualizer.sln  music_visualizer.vcxproj  notes.txt  (+4 more)
docs/: README.md  advanced.md
fullscreen_waveform/: image.glsl
glsl_optimizer/: glsl_compiler  glsl_test  glslopt
libs/SimpleFileWatcher/: .gitignore  LICENSE  README.md  premake5.lua
libs/SimpleFileWatcher/source/: FileWatcher.cpp  (+1 more)
nice_fft_shader/: image.glsl
notes/: TODO  TODO.txt  error.txt  havingTroublesWithPulse.nb  pointer_adjust_function.nb
otherWave/: vertex.glsl
rectangles/: geom.glsl
shaders/: A.frag  A.geom  B.frag  B.geom  _notes.txt  geom.glsl  image.frag  image.geom  image.glsl  shader.json
shaders/dual_waves/: image.frag
shaders/fft/: A.frag  A.geom  B.frag  geom.glsl  shader.json
shaders/fft_plain/: image.frag
shaders/lissajous/: A.geom  geom.glsl  image.glsl  shader.json
shaders/oscilloscope/: A.geom  B.frag  B.geom  geom.glsl  shader.json
shaders/otherWave/: image.glsl
shaders/rectangles/: image.glsl
shaders/smooth_lines/: geom.glsl  image.glsl
shaders/star/: geom.glsl  image.glsl  shader.json
smooth_lines/: geom.glsl
src/: AudioProcess.h  AudioStream.h  FileWatcher.h  JsonFileReader.h  LinuxAudioProvider.cpp  LinuxAudioProvider.h  ProceduralAudioStream.h  Renderer.cpp  Renderer.h  ShaderConfig.cpp  ShaderConfig.h  ShaderPrograms.cpp  ShaderPrograms.h  WavAudioStream.cpp  WavAudioStream.h  Window.cpp  Window.h  WindowsAudioStream.cpp  WindowsAudioStream.h  audio_capture.cpp  audio_data.h  audio_process.h  filesystem.cpp  filesystem.h  main.cpp  noise.cpp  noise.h  pulse_misc.h
src/AudioStreams/: LinuxAudioStream.cpp  WavAudioStream.h  WindowsAudioStream.cpp  WindowsAudioStream.h  pulse_misc.h
src/shaders/: A.geom  B.frag  B.geom  a.frag  a.geom  image.frag  shader.json
tests/: Test.h  fake_clock.cpp  fake_clock.h  run_tests.cpp  test.cpp  test_audio_process.cpp  test_audio_utilities.cpp  test_filesystem.cpp  test_shader_config.cpp  tests.cpp  tests.vcxproj
(+48 files in other folders)
